--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,10 @@ footer {
   background-color: #0a22f4;
   height: 1080px;
 }
+.footerWrapper {
+  display: flex;
+  justify-content: space-between;
+}
 .info h4 {
   padding-top: 275px;
   margin-bottom: 30px;
