--- a/css/style.css
+++ b/css/style.css
@@ -123,3 +123,21 @@ iframe {
   font-size: 22px;
   color: #ffffff;
 }
+form {
+  display: flex;
+  flex-direction: column;
+  margin-top: 375px;
+}
+label {
+  font-size: 16px;
+  color: #ffffff;
+}
+input,
+textarea {
+  background-color: transparent;
+  border: none;
+  border-bottom: #4154f6 solid 1px;
+  width: 463px;
+  height: 60px;
+  margin-bottom: 40px;
+}
