--- a/css/style.css
+++ b/css/style.css
@@ -141,3 +141,18 @@ textarea {
   height: 60px;
   margin-bottom: 40px;
 }
+.rightsWrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.rightsWrapper div {
+  display: flex;
+}
+.rightsWrapper :first-child {
+  font-size: 16px;
+  color: #ffffff;
+}
+.rightsWrapper div p {
+  margin-right: 30px;
+}
